# knk-transformer

./: README.md  TRAINING.md  check_dataset.py  data_loader.py  generate_test_data.sh  knkgpt.py  main.py  model.py  pyproject.toml  tokenizer.py
nanogpt/: model.py  trainer.py
