[project]
name = "knk-transformer"
version = "0.1.0"
description = "GPT-based model for Knights and Knaves puzzle solving"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.2",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
    "wandb>=0.16.0",
]

[project.scripts]
knk-transformer = "knkgpt:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["."]
